--- a/package.json
+++ b/package.json
@@ -13,28 +13,27 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.88.0",
-    "autoprefixer": "^10.4.23",
+    "@supabase/supabase-js": "^2.87.1",
+    "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "^16.0.10",
     "postcss": "^8.5.6",
-    "react": "^19.2.1",
+    "react": "19.2.1",
     "react-calendar": "^6.0.0",
-    "react-dom": "^19.2.1",
-    "supabase": "^2.67.2",
-    "tailwind-merge": "^3.4.0"
+    "react-dom": "19.2.1",
+    "supabase": "^2.65.8",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.27",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.8",
+    "typescript": "^5"
   }
 }
